fixed scroll bug hide overflow x

--- a/case-style.css
+++ b/case-style.css
@@ -9,7 +9,6 @@
 html {
   background: #f0f0f0;
   height: 100%;
-  overflow-x: hidden;
 }
 body {
   margin: 0;
