--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 }
 html {
   background: #f0f0f0;
+  overflow-x: hidden;
+}
+body {
 }
 
 .disapear {
